// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collection should render connected component 1`] = `
<DocumentFragment>
  .emotion-2 {
  margin: 28px 18px;
}

.emotion-0 {
  padding-left: 280px;
}

<div
    class="emotion-2 emotion-3"
  >
    <mock-sidebar
      collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [] }"
      collections="OrderedMap { 0: Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [] } }"
      filterterm=""
      searchterm=""
    />
    <main
      class="emotion-0 emotion-1"
    >
      <mock-collection-top
        collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [] }"
        newentryurl=""
      />
      <mock-collection-controls
        filter="Map {}"
        sortablefields=""
        viewfilters=""
      />
      <mock-entries-collection
        collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [] }"
        filterterm=""
      />
    </main>
  </div>
</DocumentFragment>
`;

exports[`Collection should render with collection with create url 1`] = `
<DocumentFragment>
  .emotion-2 {
  margin: 28px 18px;
}

.emotion-0 {
  padding-left: 280px;
}

<div
    class="emotion-2 emotion-3"
  >
    <mock-sidebar
      collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"create\\": true }"
      collections="OrderedMap { 0: Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [] } }"
    />
    <main
      class="emotion-0 emotion-1"
    >
      <mock-collection-top
        collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"create\\": true }"
        newentryurl="/collections/pages/new"
      />
      <mock-collection-controls />
      <mock-entries-collection
        collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"create\\": true }"
      />
    </main>
  </div>
</DocumentFragment>
`;

exports[`Collection should render with collection with create url and path 1`] = `
<DocumentFragment>
  .emotion-2 {
  margin: 28px 18px;
}

.emotion-0 {
  padding-left: 280px;
}

<div
    class="emotion-2 emotion-3"
  >
    <mock-sidebar
      collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"create\\": true }"
      collections="OrderedMap { 0: Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [] } }"
      filterterm="dir1/dir2"
    />
    <main
      class="emotion-0 emotion-1"
    >
      <mock-collection-top
        collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"create\\": true }"
        newentryurl="/collections/pages/new?path=dir1/dir2"
      />
      <mock-collection-controls />
      <mock-entries-collection
        collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"create\\": true }"
        filterterm="dir1/dir2"
      />
    </main>
  </div>
</DocumentFragment>
`;

exports[`Collection should render with collection without create url 1`] = `
<DocumentFragment>
  .emotion-2 {
  margin: 28px 18px;
}

.emotion-0 {
  padding-left: 280px;
}

<div
    class="emotion-2 emotion-3"
  >
    <mock-sidebar
      collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"create\\": false }"
      collections="OrderedMap { 0: Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [] } }"
    />
    <main
      class="emotion-0 emotion-1"
    >
      <mock-collection-top
        collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"create\\": false }"
        newentryurl=""
      />
      <mock-collection-controls />
      <mock-entries-collection
        collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"create\\": false }"
      />
    </main>
  </div>
</DocumentFragment>
`;
